--- a/tasks/Ubuntu.yml
+++ b/tasks/Ubuntu.yml
@@ -31,3 +31,10 @@
     filename: mongodb
     update_cache: yes
     state: present
+
+- name: Ensure mongodb server is present
+  apt:
+    name: mongodb
+    update_cache: yes
+    cache_valid_time: 3600
+    state: present
