Correct mongodb package

--- a/tasks/Ubuntu.yml
+++ b/tasks/Ubuntu.yml
@@ -34,7 +34,7 @@
 
 - name: Ensure mongodb server is present
   apt:
-    name: mongodb
+    name: mongodb-server
     update_cache: yes
     cache_valid_time: 3600
     state: present
