--- a/tasks/Ubuntu.yml
+++ b/tasks/Ubuntu.yml
@@ -34,7 +34,7 @@
 
 - name: Ensure mongodb server is present
   apt:
-    name: mongodb-org
+    name: mongodb-server
     update_cache: yes
     cache_valid_time: 3600
     state: present
@@ -42,10 +42,3 @@
 - name: Force systemd to reread configs
   systemd:
     daemon_reload: yes
-  
-# Hotfix for pritunl installer (empty mongodb_uri in /etc/pritunl.conf after installation)
-- name: Ensure mongodb server is present into /etc/pritunl.conf
-  lineinfile:
-    path: /etc/pritunl.conf
-    regexp: '^.*"mongodb_uri": ""$'
-    line: '    "mongodb_uri": "mongodb://127.0.0.1:27017/pritunl"'
